# subnet-vm

./: .gitignore  .out.hvm  1717573536916284000.out.hvm  1717573536916475000.out.hvm  Cargo.toml  Dockerfile  README.md  docker-compose.yml  stat.csv
src/: main.rs
src/block_stm/: mod.rs  svm_memory.rs
src/builtins_code/: add.bend  add.hvm  duangua.bend  sub.bend  transfer.bend  transfer.hvm
src/code/: hello.bend
src/examples/: alloc.rs  make_move.rs  mod.rs  query.rs  transfer.rs
src/executor/: mod.rs  redis.rs  types.rs
src/svm/: builtins.rs  mod.rs  object.rs  primitive_types.rs  svm.rs
src/svm/builtins/: add.bend  duangua.bend  duangua2.bend  duangua3.bend  mod.rs  transfer2.bend
src/types/: mod.rs
src/web_socket/: handler.rs
src/ws/: events.rs  mod.rs  types.rs
